--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+.container{
+    margin: auto;
+    max-width: 1400px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media screen and (max-width: 1500px) {
+    .container{
+        max-width: 1100px;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@media screen and (max-width: 1200px) {
+    .container{
+        max-width: 974px;
+    }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (max-width: 1024px) {
+    .container{
+        max-width: 700px;
+    }
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 2rem;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+@media screen and (max-width: 480px) {
+    .container {
+        padding: 1rem;
+    }
 }
+
+
