--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -9,7 +9,7 @@
     background-color: #0f0f56;
 }
 
-#navbar > a{
+#navbar > .navbar-item{
     color: white;
     height: 100%;
     display: flex;
@@ -24,7 +24,7 @@
     transition: background-color 0.3s ease-in;
 }
 
-#navbar > a:hover{
+#navbar > .navbar-item:hover{
     background-color: #1b2f64;
     transition: background-color 0.3s ease-out;
 }
@@ -72,7 +72,7 @@
     width: auto;
     cursor: pointer;
 }
-.menu-tab-item > a {
+.menu-tab-item > .navbar-item {
     text-decoration: none;
     padding-left: 2rem;
     color: #3b3b3b;
@@ -82,7 +82,7 @@
     align-items: center;
     font-size: 1.1rem;
 }
-.menu-tab-item > a:hover{
+.menu-tab-item > .navbar-item:hover{
     background-color: #989797;
 }
 .menu-tab-item.active{
@@ -104,7 +104,7 @@
         transition: 0.5s;
         padding: 0 2rem;
     }
-    #navbar > a {
+    #navbar > .navbar-item {
         display: none;
     }
     .menu{
